fix admin bar wrap, mobile menu position for (logged in). new functions...
-Introduce cron function sketch to periodically clean up debug.log if > 100 MB
-Introduce code to work on mobile menu sub-item clickability issue

--- a/themes/haSepharadi/scss/partials/media/_max-width-960.scss
+++ b/themes/haSepharadi/scss/partials/media/_max-width-960.scss
@@ -199,6 +199,7 @@
     // Sub Menu
     .sub-menu-toggle {
       color: $mid-grey-4;
+      display: none;
     }
 
     .sub-menu {
@@ -267,9 +268,9 @@
     }
   }
 
-  .sub-menu-toggle {
-    color: $mid-grey-4;
-  }
+  // .sub-menu-toggle {
+  //   color: $mid-grey-4;
+  // }
 
   // Sidebar
   .sidebar-primary {
